# psa-crypto-arduino

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  _p_s_a_crypto_8h_source.html  acc__driver__cipher_8h_source.html  acc__driver__hash_8h_source.html  acc__driver__rsa_8h_source.html  annotated.html  asn1_8h_source.html  asn1write_8h_source.html  bignum_8h_source.html  build__info_8h_source.html  camellia_8h_source.html  cbc__mode_8h.html  cbc__mode_8h_source.html  ccm_8h_source.html  ccm__mode_8h.html  ccm__mode_8h_source.html  chacha20_8h_source.html  chachapoly_8h_source.html  check__config_8h_source.html  cipher_8h_source.html  cipher__wrap_8c.html  cipher__wrap_8h.html  cipher__wrap_8h_source.html  classes.html  client_8h_source.html  cmac_8h_source.html  cmac__mode_8h.html  cmac__mode_8h_source.html  common_8h_source.html  config__psa_8h_source.html  constants_8h.html  constants_8h_source.html  crypto_2psa__crypto__aead_8h_source.html  crypto_2psa__crypto__all_8h_source.html  crypto_2psa__crypto__cipher_8h_source.html  crypto_2psa__crypto__core_8h_source.html  (+405 more)
.github/workflows/: arduino-ci.yaml  ci.yml  code-formatting.yaml  doxygen-gh-pages.yml  release-please.yaml
docs/: readme.md
examples/Aes/: Aes.ino
examples/AesMultipart/: AesMultipart.ino
examples/GenerateKey/: GenerateKey.ino
examples/GenerateRandom/: GenerateRandom.ino
examples/Hash/: Hash.ino
examples/HashMultipart/: HashMultipart.ino
examples/SignMessage/: SignMessage.ino
search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  (+46 more)
src/: PSACrypto.h
src/include/: common.h
src/include/config/: iotex_layer_config.h
src/include/crypto/: psa_crypto_core.h  psa_crypto_driver_wrappers.h  psa_crypto_ecp.h  psa_crypto_invasive.h  psa_crypto_rsa.h  psa_crypto_se.h  psa_crypto_storage.h
src/include/iotex/: aes.h  asn1.h  asn1write.h  bignum.h  build_info.h  camellia.h  ccm.h  chacha20.h  chachapoly.h  check_config.h  cipher.h  cmac.h  config_psa.h  ctr_drbg.h  des.h  ecdh.h  ecdsa.h  ecp.h  entropy.h  error.h  gcm.h  hmac_drbg.h  iotex_crypto_all.h  md.h  md5.h  oid.h  pk.h  platform.h  platform_time.h  platform_util.h  poly1305.h  psa_crypto_random_impl.h  psa_util.h  ripemd160.h  rsa.h  sha1.h  sha256.h  sha512.h
src/include/psa/: client.h  crypto.h  crypto_client_struct.h  crypto_compat.h  error.h  (+11 more)
src/psa_layer/: cipher_wrap.c  entropy.c  psa_crypto.c  psa_crypto_aead.c  psa_crypto_cipher.c  psa_crypto_client.c  psa_crypto_driver_wrappers.c  psa_crypto_ecdh.c  psa_crypto_ecp.c  psa_crypto_hash.c  psa_crypto_mac.c  psa_crypto_porting.c  psa_crypto_rsa.c  psa_crypto_slot_management.c
src/tinycrypt/: aes_decrypt.c  aes_encrypt.c  cbc_mode.c  ccm_mode.c  cmac_mode.c  ctr_mode.c  ctr_prng.c  ecc.c  ecc_dh.c  ecc_dsa.c  ecc_platform_specific.c  hmac.c  hmac_prng.c  sha256.c  utils.c
(+30 files in other folders)
